tests/js/invalid/enum/mismatched-types-1.buri
Color = .red | .green | .blue

blue = Color.blue(0.5)